Logo changes, Favicon, Header color, removed unused svg

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="icon" href="/Logo_Punk_Records-removebg-preview_Nero_AI_Image_Upscaler_Photo_Face.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Punk Records - Creative Agency | Web Development, Photography, Music Production</title>
     <meta name="description" content="Leading creative agency in Nagpur offering web development, photography, videography, music production, and digital marketing services for businesses across India." />
